syntax = "proto3";

service Chat {
  rpc GetGroupIds (GetGroupIdsReq) returns (GetGroupIdsRes) {}
}

message GetGroupIdsReq {
  bytes user_id = 1;
}

message GetGroupIdsRes {
  repeated bytes group_ids = 1;
}

